--- a/04meituan/package.json
+++ b/04meituan/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
+    "better-scroll": "^1.15.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lib-flexible": "^0.3.2",
