使用vuex管理购物车数据

--- a/04meituan/package.json
+++ b/04meituan/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.4.4",
     "vant": "^2.4.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -40,8 +41,15 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console":"off",
-      "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+      "no-console": "off",
+      "no-unused-vars": [
+        "warn",
+        {
+          "vars": "all",
+          "args": "after-used",
+          "ignoreRestSiblings": false
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
